# blogapi_project

./: .gitignore  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py  0002_customuser_phone_number.py
core/: settings.py  urls.py
posts/: models.py  permissions.py  serializers.py  tests.py  views.py
posts/migrations/: 0001_initial.py
